After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668586 - Fix Launcher icons too close together
Fix Launcher icons too close together
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: panel
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-24 15:23 UTC by Peter Hurley
Modified: 2012-02-02 10:26 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
patch 1/1 (3.89 KB, patch)
2012-01-24 15:23 UTC, Peter Hurley
committed Details | Review

Description Peter Hurley 2012-01-24 15:23:25 UTC
Created attachment 205992 [details] [review]
patch 1/1

This patch fixes Launcher icons being too close together by using padding style property and exposing the '.horizontal' and '.vertical' style classes to theming.

This basic approach should probably be used for other panel elements that have orientation. (Optionally, orientable panel classes should be based on GtkOrientation to provide this automatically. However, GtkOrientation doesn't provide left/right, top/bottom distinctions. But it should.)
Comment 1 Vincent Untz 2012-02-02 10:26:40 UTC
Comment on attachment 205992 [details] [review]
patch 1/1

Thanks, I cleaned things a bit and pushed it.

For reference, I had issues because of what seems to be a bug in GTK+ (see bug 669229).