panel: Use horizontal/vertical padding for button widgets

This avoids launcher being too close to each other.

In addition, the "horizontal"/"vertical" class styles can be used to
express the padding in a natural way:

     ButtonWidget.button.horizontal {
         padding : 0px 3px 0px 3px;
     }

https://bugzilla.gnome.org/show_bug.cgi?id=668586